--- a/01. express/package.json
+++ b/01. express/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon app.ts",
     "start-server": "node app.ts"
   },
-  "author": "Maximilian Schwarzmüller",
+  "author": "gui",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
